--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
+# Для работы с Telegram-ботом, Todoist и Yougile
 python-telegram-bot==22.1
 requests==2.31.0
 yandex-speechkit==1.5.0
 pydub==0.25.1
 SpeechRecognition==3.10.1
+# Для поддержки yougile_api
+pydantic==1.10.14
